Added tip button

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -63,7 +63,8 @@
           <ion-icon name="eye-off"></ion-icon>
           Only you see this
         </div>
-        <div class="dashboard__total-updates__content"><em><%= @your_total_wallpapers_changed_all %></em>wallpapers</div>
+        <div class="dashboard__total-updates__content"><em><%= @your_total_wallpapers_changed_all %></em>wallpapers
+        </div>
       </div>
     </div>
     <div class="dashboard__newest-user">
@@ -114,7 +115,8 @@
     (Android 12+)
   </li>
   <li>
-    <a href="https://github.com/Lycraon/Walltaker-for-WallpaperEngine" target="_blank">Lycraon's Wallpaper Engine Client</a>
+    <a href="https://github.com/Lycraon/Walltaker-for-WallpaperEngine" target="_blank">Lycraon's Wallpaper Engine
+      Client</a>
     (<a href="https://store.steampowered.com/app/431960/Wallpaper_Engine/">Wallpaper Engine for Windows</a>)
   </li>
   <li>
@@ -125,6 +127,21 @@
     <a href="http://joi.how/" target="_blank">JOI.how</a> (Web-based)
   </li>
 </ul>
+
+<h2>Help us out!</h2>
+<p>
+  We'll be upfront! This site very cheap to operate. We have very little in running costs, and I am personally OK with
+  paying the $3-5 a month it costs in bandwidth and compute that it takes to keep this service online; however, a few
+  folks have asked if they can compensate our <strong>time</strong> as a tip, so we set up a kofi!
+</p>
+<p>
+  Know that this is
+  just for donating to us, because we like money. The site is cheap to run, interesting to work on, and is <strong>not in danger</strong> of being shut down due
+  to expenses. It's just a nice gesture that's very much appreciated.
+</p>
+<script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script>
+<script type='text/javascript'>kofiwidget2.init('Just the Tip', '#ffb300', 'T6T533UNC');
+kofiwidget2.draw();</script>
 
 <h2 class="page-break">Frequently Asked Question</h2>
 <blockquote>
