--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -139,9 +139,8 @@
   just for donating to us, because we like money. The site is cheap to run, interesting to work on, and is <strong>not in danger</strong> of being shut down due
   to expenses. It's just a nice gesture that's very much appreciated.
 </p>
-<script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script>
-<script type='text/javascript'>kofiwidget2.init('Just the Tip', '#ffb300', 'T6T533UNC');
-kofiwidget2.draw();</script>
+
+<a href="https://ko-fi.com/pawcorp" target="_blank" class="kofi-button"><button><ion-icon name="cafe"></ion-icon> Just the tip!</button></a>
 
 <h2 class="page-break">Frequently Asked Question</h2>
 <blockquote>
