Fixed a big memory leak issue where a new stream was getting created when the links updated

--- a/app/views/links/browse.html.erb
+++ b/app/views/links/browse.html.erb
@@ -10,6 +10,7 @@
 
 <div id="links">
   <% @links.each do |link| %>
+    <%= turbo_stream_from link %>
     <a href="<%= link_url(link) %>" class="clean">
       <%= render link %>
     </a>
