Fixed some issues with long usernames

--- a/app/views/links/_submit.html.erb
+++ b/app/views/links/_submit.html.erb
@@ -1,7 +1,7 @@
 <% target = "submit_link_#{link.id}" %>
 
 <%= turbo_frame_tag target do %>
-  <h2>
+  <h2 class="one-line">
     Change <%= link_to link.user.username, user_path(link.user.username), target: '_top' %>'s wallpaper
     <small>Last changed <%= link.past_links.empty? ? 'never' : (time_ago_in_words link.past_links.last.created_at) + ' ago' %></small>
   </h2>
