--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,7 +21,7 @@
   <% end %>
 </div>
 
-<h2>
+<h2 class="one-line">
   <ion-icon name="person" class="big"></ion-icon> <%= @user.username %>
   <% if @any_links_online %>
     <strong class="online" title="User is online"></strong>
