Adding a more obvious adult content warning

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,9 @@
 
 <body>
 <header>
+  <div class="header__age-warning">
+    🔞 This is an application for adults over the age of 18 only.
+  </div>
   <div class="header__inner">
     <h1><a href="/">
       <span class="show-desktop">Walltaker</span>
