Adding Deans' client to the agent icons

--- a/app/views/links/_link.html.erb
+++ b/app/views/links/_link.html.erb
@@ -84,6 +84,9 @@
         <% when :joihow %>
           JOI.how
           <ion-icon name="earth-outline"></ion-icon>
+        <% when :automate %>
+          Deans' Client
+          <svg height="28" width="28"><use xlink:href="/icon-automate.svg#Calque_1"></use></svg>
         <% when :unknown %>
           <ion-icon name="help-circle-outline"></ion-icon>
         <% end %>
