--- a/app/views/links/_submit.html.erb
+++ b/app/views/links/_submit.html.erb
@@ -1,22 +1,4 @@
-<% target = "submit_link_#{link.id}" %>
-
-<%= turbo_frame_tag target do %>
-  <h2 class="one-line">
-    Change <%= link_to link.user.username, user_path(link.user.username), target: '_top' %>'s wallpaper
-    <small>Last changed <%= link.past_links.empty? ? 'never' : (time_ago_in_words link.past_links.last.created_at) + ' ago' %></small>
-  </h2>
-
-  <% if link.post_thumbnail_url %>
-    <figure>
-      <a href="<%= link.post_url %>" target="_blank">
-        <img src="<%= link.post_thumbnail_url %>"/>
-      </a>
-      <figcaption>
-        <%= link.post_description %>
-      </figcaption>
-    </figure>
-  <% end %>
-
+<%= turbo_frame_tag "submit_link_#{link.id}" do %>
   <div class="link--flashes">
     <% flash.each do |type, msg| %>
       <div class="flash--<%= type == 'notice' ? 'success' : 'danger' %>">
@@ -35,4 +17,18 @@
       <%= form.submit %>
     </div>
   <% end %>
+
+  <% if @link.theme %>
+    <p class="subdued center">
+      The theme tag <strong><ion-icon name="pricetag-outline"></ion-icon> <%= @link.theme %></strong> must be present on post.
+    </p>
+  <% end %>
+
+  <figure class="half-page-break">
+    <img src="/e621postid.gif"/>
+    <figcaption>The post ID is the main number shown in the post URL. You should only include this number, not
+      anything
+      after the question mark in the post URL, or anything before the number.
+    </figcaption>
+  </figure>
 <% end %>
