Oops, checking if link.theme is empty

--- a/app/views/links/_submit.html.erb
+++ b/app/views/links/_submit.html.erb
@@ -18,7 +18,7 @@
     </div>
   <% end %>
 
-  <% if @link.theme %>
+  <% unless (@link.theme.nil? || @link.theme.empty?) %>
     <p class="subdued center">
       The theme tag <strong><ion-icon name="pricetag-outline"></ion-icon> <%= @link.theme %></strong> must be present on post.
     </p>
