Added cog icon for lycaon's wallpaper engine client

--- a/app/views/links/_link.html.erb
+++ b/app/views/links/_link.html.erb
@@ -87,6 +87,9 @@
         <% when :automate %>
           <span>Deans' Client</span>
           <svg height="28" width="28"><use xlink:href="/icon-automate.svg#Calque_1"></use></svg>
+        <% when :wallpaper_engine %>
+          <span>Lycaon's Wallpaper Engine</span>
+          <ion-icon name="cog"></ion-icon>
         <% when :unknown %>
           <ion-icon name="help-circle-outline"></ion-icon>
         <% end %>
