monitoring this: sorting browse page by recent updates ascending, #20

--- a/app/views/links/browse.html.erb
+++ b/app/views/links/browse.html.erb
@@ -6,7 +6,10 @@
   </div>
 </div>
 
-<h2><ion-icon name="documents" class="big"></ion-icon> Browse Links</h2>
+<h2>
+  <ion-icon name="documents" class="big"></ion-icon> Browse Links
+  <small>All public online links ordered by who needs the most attention at the top.</small>
+</h2>
 
 <div id="links">
   <% @links.each do |link| %>
