more specific selector for overflow on figure captions fixes #28

--- a/app/views/links/_details.html.erb
+++ b/app/views/links/_details.html.erb
@@ -13,7 +13,7 @@
       <a href="<%= link.post_url %>" target="_blank">
         <img src="<%= link.post_thumbnail_url %>"/>
       </a>
-      <figcaption>
+      <figcaption class="link--description">
         <%= link.post_description %>
       </figcaption>
     </figure>
