--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
       <span class="show-desktop">Walltaker</span>
       <span class="show-mobile">WT</span>
     </a></h1>
-    <div class="user-tools" data-controller="notifications">
+    <div class="user-tools">
       <% if current_user %>
         <a class="username" href="<%= user_path current_user.username %>">
           <%= current_user.username %>
