added live notification feeds, holy shit turbo streams are cool

--- a/app/views/application/_notifications.html.erb
+++ b/app/views/application/_notifications.html.erb
@@ -1,33 +1,35 @@
-<div class="notifications" data-controller="notifications">
-  <%= button_tag class: 'notification-bell', data: { 'notifications-target': 'trigger', 'action': 'click->notifications#toggle' } do %>
-    <ion-icon name="notifications"></ion-icon>
-  <% end %>
-
-  <div class="notifications__popover" data-notifications-target="popover">
-    <% if notifications.count == 0 %>
-      <div class="notifications__empty">
-        No notifications yet.
-      </div>
+<%= turbo_frame_tag "header_notifications", target: '_top' do %>
+  <div class="notifications" data-controller="notifications">
+    <%= button_tag class: 'notification-bell', data: { 'notifications-target': 'trigger', 'action': 'click->notifications#toggle' } do %>
+      <ion-icon name="notifications"></ion-icon>
     <% end %>
-    <% notifications.each do |notification| %>
-      <%= link_to notification_path(notification.id), class: 'notification' do %>
-        <% case notification.notification_type %>
-          <% when 'friend_request_sent' %>
+
+    <div class="notifications__popover" data-notifications-target="popover">
+      <% if notifications.count == 0 %>
+        <div class="notifications__empty">
+          No notifications yet.
+        </div>
+      <% end %>
+      <% notifications.each do |notification| %>
+        <%= link_to notification_path(notification.id), class: 'notification' do %>
+          <% case notification.notification_type %>
+      <% when 'friend_request_sent' %>
             <ion-icon name="send"></ion-icon>
           <% when 'friend_request_received' %>
             <ion-icon name="boat"></ion-icon>
           <% when 'friend_request_they_accepted' %>
             <ion-icon name="heart"></ion-icon>
           <% when 'post_response' %>
-          <ion-icon name="chatbubble-ellipses"></ion-icon>
-        <% end %>
-        <div>
-          <p><%= notification.text %></p>
-          <%= time_tag notification.created_at do %>
-            <%= time_ago_in_words notification.created_at %> ago
+            <ion-icon name="chatbubble-ellipses"></ion-icon>
           <% end %>
-        </div>
+          <div>
+            <p><%= notification.text %></p>
+            <%= time_tag notification.created_at do %>
+              <%= time_ago_in_words notification.created_at %> ago
+            <% end %>
+          </div>
+        <% end %>
       <% end %>
-    <% end %>
+    </div>
   </div>
-</div>
+<% end %>
