--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,6 +42,8 @@
         <%= link_to 'Links', links_path %>
         <%= link_to 'Friends', friendships_path, class: has_requests? ? 'pinged' : '' %>
         <%= link_to 'Logout', logout_path %>
+
+        <%= turbo_stream_from "header_notifications_#{current_user.id}" %>
         <%= render partial: 'notifications' %>
       <% else %>
         <a href="<%= url_for :action => :browse, :controller => :links %>">
