Closes #23 scrollable area for terms in links, showing line breaks

--- a/app/views/links/_link.html.erb
+++ b/app/views/links/_link.html.erb
@@ -59,7 +59,7 @@
         ⚠️ No Terms
       <% else %>
         <blockquote>
-          <%= link.terms %>
+          <%= simple_format link.terms %>
         </blockquote>
       <% end %>
     </div>
