Link to fll description on home page from link about clients

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -89,7 +89,7 @@
   results, with an enforced blacklist. This keeps you in control, but not <em>too much</em> control.
 </p>
 
-<h2>What do I need?</h2>
+<h2 id="what-do-i-need">What do I need?</h2>
 <p>
   Walltaker requires you to <strong>make an account on the website (here!) first.</strong> Once you have an
   account, you
